--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,12 @@
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
-        <module>auto-compile</module>
+        <module>project-builder</module>
         <module>common</module>
         <module>miner</module>
         <module>regminerx-test</module>
+        <module>rfc-predict</module>
+        <module>bic-search</module>
         <module>code-migrate</module>
     </modules>
 
