--- a/project-builder/pom.xml
+++ b/project-builder/pom.xml
@@ -9,23 +9,11 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>miner</artifactId>
+    <artifactId>project-builder</artifactId>
     <dependencies>
         <dependency>
             <groupId>org.regminer</groupId>
-            <artifactId>project-builder</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.regminer</groupId>
-            <artifactId>rfc-predict</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.regminer</groupId>
-            <artifactId>bic-search</artifactId>
+            <artifactId>common</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
