--- a/rfc-predict/pom.xml
+++ b/rfc-predict/pom.xml
@@ -9,31 +9,25 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>miner</artifactId>
+    <artifactId>rfc-predict</artifactId>
     <dependencies>
         <dependency>
             <groupId>org.regminer</groupId>
-            <artifactId>project-builder</artifactId>
+            <artifactId>common</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.regminer</groupId>
-            <artifactId>rfc-predict</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.regminer</groupId>
-            <artifactId>bic-search</artifactId>
+            <artifactId>auto-compile</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
 
     <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
     </properties>
 
 </project>
