--- a/miner/env.properties
+++ b/miner/env.properties
@@ -14,6 +14,6 @@ test_symbol=#
 
 ################mysql config######################
 sql_enable =1
-sql_url =jdbc:mysql://10.177.21.179:3306/code_annotation2?useSSL=false&allowPublicKeyRetrieval=true&characterEncoding=UTF8
+sql_url =jdbc:mysql://10.176.34.95:3306/experiment?useSSL=false&allowPublicKeyRetrieval=true&characterEncoding=UTF8
 username =root
-passwd =123456
+passwd =1235
