regminer test expand(test mybatis)

--- a/miner/env.properties
+++ b/miner/env.properties
@@ -3,8 +3,9 @@
 #path=/usr/bin/mvn;
 code_cover=0
 auto_compile=1
-project_name =commons-jexl
-root_dir =E:\\reg-enhance\\data\\meta_projects
+project_name =mybatis-3
+local_dir =E:\\reg-enhance\\data\\miner_space
+root_dir =/root/miner_space
 command_line=mvn compile test-compile
 test_line=mvn test -Dtest=
 test_symbol=#
@@ -14,6 +15,6 @@ test_symbol=#
 
 ################mysql config######################
 sql_enable =1
-sql_url =jdbc:mysql://10.176.34.95:3306/regression?useSSL=false&allowPublicKeyRetrieval=true&characterEncoding=UTF8
+sql_url =jdbc:mysql://10.176.34.95:3306/experiment?useSSL=false&allowPublicKeyRetrieval=true&characterEncoding=UTF8
 username =root
 passwd =1235
